--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "author": "Saikiran Jamiligiri",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
